// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/Footer Footer 1`] = `
Array [
  <div
    className="css-1skzlyf"
  >
    <div
      className="css-vrma7h"
    >
      <div
        className="css-tkevr6"
      >
        <p
          className="chakra-text css-79wky"
        >
          kyosuke kubo, All rights reserved.
        </p>
      </div>
    </div>
  </div>,
  <span />,
]
`;

exports[`Storyshots Common/IconButton Addiconbutton 1`] = `
Array [
  <svg
    aria-label="add radio"
    className="chakra-icon css-1brw3wn"
    focusable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
    viewBox="0 0 24 24"
  >
    <path
      d="M0,12a1.5,1.5,0,0,0,1.5,1.5h8.75a.25.25,0,0,1,.25.25V22.5a1.5,1.5,0,0,0,3,0V13.75a.25.25,0,0,1,.25-.25H22.5a1.5,1.5,0,0,0,0-3H13.75a.25.25,0,0,1-.25-.25V1.5a1.5,1.5,0,0,0-3,0v8.75a.25.25,0,0,1-.25.25H1.5A1.5,1.5,0,0,0,0,12Z"
      fill="currentColor"
    />
  </svg>,
  <span />,
]
`;

exports[`Storyshots Common/IconButton Closeiconbutton 1`] = `
Array [
  <svg
    aria-label="close"
    className="chakra-icon css-1brw3wn"
    focusable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
    viewBox="0 0 24 24"
  >
    <path
      d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
      fill="currentColor"
    />
  </svg>,
  <span />,
]
`;

exports[`Storyshots Common/IconButton Deleteiconbutton 1`] = `
Array [
  <svg
    aria-label="add radio"
    className="chakra-icon css-1brw3wn"
    focusable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
    viewBox="0 0 24 24"
  >
    <g
      fill="currentColor"
    >
      <rect
        height="4"
        width="20"
        x="2"
        y="10"
      />
    </g>
  </svg>,
  <span />,
]
`;

exports[`Storyshots Common/IconButton Editiconbutton 1`] = `
Array [
  <svg
    aria-label="edit"
    className="chakra-icon css-112nddr"
    focusable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
    viewBox="0 0 24 24"
  >
    <g
      fill="none"
      stroke="currentColor"
      strokeLinecap="round"
      strokeWidth="2"
    >
      <path
        d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
      />
      <path
        d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
      />
    </g>
  </svg>,
  <span />,
]
`;

exports[`Storyshots Common/IconButton Logouticonbutton 1`] = `
Array [
  <svg
    aria-label="logout"
    className="chakra-icon css-tf4dva"
    fill="none"
    focusable={false}
    height="1em"
    onClick={[Function]}
    role="button"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
    />
    <polyline
      points="16 17 21 12 16 7"
    />
    <line
      x1="21"
      x2="9"
      y1="12"
      y2="12"
    />
  </svg>,
  <span />,
]
`;

exports[`Storyshots Common/IconButton Saveiconbutton 1`] = `
Array [
  <svg
    aria-label="save"
    className="chakra-icon css-94d0b9"
    focusable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
    viewBox="0 0 14 14"
  >
    <g
      fill="currentColor"
    >
      <polygon
        points="5.5 11.9993304 14 3.49933039 12.5 2 5.5 8.99933039 1.5 4.9968652 0 6.49933039"
      />
    </g>
  </svg>,
  <span />,
]
`;

exports[`Storyshots Common/Image Image 1`] = `
Array [
  <div
    className="css-1skzlyf"
  >
    <img
      alt="sample user page UI"
      className="chakra-image css-dil7y7"
      src="/profile2.png"
    />
  </div>,
  <span />,
]
`;

exports[`Storyshots Common/Input Input 1`] = `
Array [
  <input
    className="chakra-input css-1c6j008"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="placeholder test"
    value=""
  />,
  <span />,
]
`;

exports[`Storyshots Common/NormalButton Graybutton 1`] = `
Array [
  <button
    className="chakra-button css-1h3syuz"
    onClick={[Function]}
    type="button"
  >
    test Text
  </button>,
  <span />,
]
`;

exports[`Storyshots Common/NormalButton Sign Inbutton 1`] = `
Array [
  <button
    onClick={[Function]}
  >
    <svg
      className="chakra-icon css-y5ajab"
      enableBackground="new 0 0 48 48"
      fill="currentColor"
      focusable={false}
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      version="1.1"
      viewBox="0 0 48 48"
      width="1em"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <path
        d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12
	c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24
	c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"
        fill="#FFC107"
      />
      <path
        d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657
	C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"
        fill="#FF3D00"
      />
      <path
        d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36
	c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z"
        fill="#4CAF50"
      />
      <path
        d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571
	c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z"
        fill="#1976D2"
      />
    </svg>
    <p
      className="chakra-text css-1h7w6cc"
    >
      test Text
    </p>
  </button>,
  <span />,
]
`;

exports[`Storyshots Common/NormalButton Whitebutton 1`] = `
Array [
  <button
    className="chakra-button css-157t208"
    onClick={[Function]}
    type="button"
  >
    test Text
  </button>,
  <span />,
]
`;

exports[`Storyshots Common/Text Text 1`] = `
Array [
  <p
    className="chakra-text css-aalimy"
  >
    text
  </p>,
  <span />,
]
`;
